feat :basic user creation

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/n3rdkid/githubactions-decode-test#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase-admin": "^10.0.0",
     "nodemon": "^2.0.15"
   }
 }
