fix : typo in firebase secret

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,11 +33,15 @@ jobs:
         run:  yarn install
 
       - name: Create service account key
-        run: echo ${{secrets.FIREBASE_KEY}} | base64 --decode >> serviceAccountKey.json  
+        run: echo ${{secrets.FIREBASE_SERVICE_KEY}} | base64 --decode >> serviceAccountKey.json  
 
+      - name: Show file list
+        run: ls
+      
       - name: Build the repository
         run: |
           yarn run start
+
 
       - name: Setup Cloud SDK
         uses: google-github-actions/setup-gcloud@v0.2.0
